--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
         </tr>
         {% for word in words %}
             <tr>
-                <td><img src="/static/images/{{ word[2] }}.png" alt="{{ word[2] }}" width="100" height="100"></td>
+                <td><img src="/static/images/{{ word[2] }}.jpg" alt="{{ word[2] }}" width="100" height="100"></td>
                 <td>{{ word[1] }}</td>
                 <td>{{ word[2] }}</td>
                 <td>{{ word[3] }}</td>
