Display category names for new ID-based categories

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
                 <td>{{ word[2] }}</td>
                 <td>{{ word[3] }}</td>
                 <td>{{ word[4] }}</td>
-                <td>{{ word[5] }}</td>
+                <td>{{ categories[word[5]] }}</td>
             </tr>
         {% endfor %}
         </tr>
