--- a/templates/base.html
+++ b/templates/base.html
@@ -1,50 +1,56 @@
-
 <!doctype html>
 <html lang="en">
 <head>
-	<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Suez+One&display=swap" rel="stylesheet">
-	<title>{% block title %}{% endblock %}</title>
-	<meta name="Description" content="Author: D Benseman, Content: A dictionary to convert maori words to english.">
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Suez+One&display=swap" rel="stylesheet">
+    <title>{% block title %}{% endblock %}</title>
+    <meta name="Description" content="Author: D Benseman, Content: A dictionary to convert maori words to english.">
 </head>
 
 <body>
-	<div id="container">
+<div id="container">
 
-		<header>
-			<h1>{% block heading %}{% endblock %}</h1>
-		</header>
+    <header>
+        <h1>{% block heading %}{% endblock %}</h1>
+    </header>
 
-		<nav>
-            <input type="checkbox" name="drop_down_menu" />
-			<span></span>
-			<span></span>
-			<span></span>
-			<ul>
-                <li><a href="\">Home</a></li>
-
-			</ul>
-		</nav>
-
-
-		<!--
-		=====================================================
-		== Content row of the template.                 ==
-		=====================================================
-		-->
-
-		<main>
-            {% block main%}{% endblock %}
-        </main>
+    <nav>
+        <input type="checkbox" name="drop_down_menu"/>
+        <span></span>
+        <span></span>
+        <span></span>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <br>
+            <li><a href="/login">Log In</a></li>
+            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="/search">Search for a word</a></li>
+            <br>
+            {% for category in categories %}
+                <li><a href="/category/{{ category[0] }}">{{ category[1] }}</a></li>
+            {% endfor %}
+        </ul>
+    </nav>
 
 
-		<footer>
-			<p>
-				&copy; Noah Ball 2024
-			</p>
-		</footer>
+    <!--
+    =====================================================
+    == Content row of the template.                 ==
+    =====================================================
+    -->
 
-	</div>
+    <main>
+        {% block main %}{% endblock %}
+    </main>
+
+
+    <footer>
+        <p>
+            &copy; Noah Ball 2024
+        </p>
+    </footer>
+
+</div>
 </body>
 </html>
