--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <h2>Log in to your account</h2>
-    <form>
+    <form action="/login" method="post">
     <div class="dataForm">
         <p>Username</p>
         <input type="text" id="username" name="username" required>
