--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,14 +6,16 @@
 
 {% block main %}
     <h2>Sign up for an account</h2>
-    <form>
+    <form action="/signup" method="post">
     <div class="dataForm">
+        <p>Name</p>
+        <input type="text" id="name" name="name" required>
         <p>Username</p>
         <input type="text" id="username" name="username" required>
         <p>Password</p>
         <input type="password" id="password" name="password" required>
         <p>Confirm Password</p>
-        <input type="confirm_password" id="confirm_password" name="confirm_password" required>
+        <input type="password" id="confirm_password" name="confirm_password" required>
         <input type="submit" value="Log in">
         <p>Already have an account? <a href="">Log In</a></p>
     </div>
