Login error handling

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,9 @@
 
 {% block main %}
     <h2>Log in to your account</h2>
+    {% if error %}
+        <p>{{ error }}</p>
+    {% endif %}
     <form action="/login" method="post">
     <div class="dataForm">
         <p>Username</p>
