Login/signup callout links

--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
         <p>Password</p>
         <input type="password" id="password" name="password" required>
         <input type="submit" value="Log in">
-        <p>Don't have an account? <a href="">Sign Up</a></p>
+        <p>Don't have an account? <a href="/signup">Sign Up</a></p>
     </div>
     </form>
 {% endblock %}
