--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,7 +17,7 @@
         <p>Confirm Password</p>
         <input type="password" id="confirm_password" name="confirm_password" required>
         <input type="submit" value="Log in">
-        <p>Already have an account? <a href="">Log In</a></p>
+        <p>Already have an account? <a href="/login">Log In</a></p>
     </div>
     </form>
 {% endblock %}
