--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,6 +6,9 @@
 
 {% block main %}
     <h2>Sign up for an account</h2>
+    {% if error %}
+        <p>{{ error }}</p>
+    {% endif %}
     <form action="/signup" method="post">
     <div class="dataForm">
         <p>Name</p>
