--- a/templates/word.html
+++ b/templates/word.html
@@ -10,7 +10,7 @@
         <h2 style="padding-top: 0">{{ word[2] }}</h2>
         <p>Definition: {{ word[3] }}</p>
         <p>Level: {{ word[4] }}</p>
-        <p>Category: {{ word[5] }}</p>
+        <p>Category: {{ cat_name }}</p>
     </div>
     <div>
     <img style="max-height: 400px; max-width: 400px; padding-top: 1rem" src="/static/images/{{ word[6] or "noimage.jpg" }}" alt="{{ word[2] }}">
