--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,6 +45,14 @@ a {
 img {
     width: 100%;
 }
+
+button {
+    border-radius: 10px;
+    padding: 0.5rem;
+    margin-bottom: 0.9rem;
+    font-size: 0.9rem;
+}
+
 .dataForm {
     margin: 1rem 0;
     border: 1px solid #999;
