Record and retrieve user/time when added

--- a/templates/word.html
+++ b/templates/word.html
@@ -11,6 +11,9 @@
         <p>Definition: {{ word[3] }}</p>
         <p>Level: {{ word[4] }}</p>
         <p>Category: {{ cat_name }}</p>
+        <br>
+        <p>Added by: {{ word[9] }}</p>
+        <p>Added on: {{ word[10] }}</p>
     </div>
     <div>
     <br>
