--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
                     <li><a>You have teacher access</a></li>
                     <br>
                     <li><a href="/add-category">Add Category</a></li>
+                    <li><a href="/manage-users">Manage Users</a></li>
                 {% endif %}
                 <br>
                 <li><a href="/">Home</a></li>
