Tidy up comments and code

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Māori Dictionary | Login{% endblock %}
+{% block title %}Māori Dictionary | Sign Up{% endblock %}
 
 {% block heading %}Māori - English Dictionary{% endblock %}
 
