--- a/templates/word.html
+++ b/templates/word.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Māori Dictionary | Home{% endblock %}
+{% block title %}Māori Dictionary | {{ word[1] }}{% endblock %}
 
 {% block heading %}Māori - English Dictionary{% endblock %}
 
