--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Māori Dictionary | Home{% endblock %}
+{% block title %}Māori Dictionary | {{ cat_name }}{% endblock %}
 
 {% block heading %}Māori - English Dictionary{% endblock %}
 
