--- a/templates/home.html
+++ b/templates/home.html
@@ -12,8 +12,8 @@
         <p><i>Add a new word on the page for the category you would like to add it to.</i></p>
         <br>
     {% endif %}
-    {% if error %}
-        <p>{{ error }}</p>
+    {% if message %}
+        <p>{{ message }}</p>
         <br>
     {% endif %}
     <table>
